# cad

./: .dockerignore  .gitignore  AI_GENERATION_PROMPT.md  AUDIT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  DEPLOYMENT_PROMPT.md  Dockerfile  FEATURE_IMPROVEMENT_PROMPT.md  IMPROVEMENT_PROMPT.md  LICENSE  PLATFORM_PROMPT.md  PRO_CAD_PROMPT.md  README.md  SECURITY.md  UI_UX_PROMPT.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  fly.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  fly-deploy.yml  release.yml
demo/static/: admin.html  admin.js  common.js  home.html  home.js  index.html  manifest.json  mesh3d.html  mesh3d.js  sketch.js  styles.css  sw.js  tokens.css
docs/: brep_design.md  configuration.md  deployment.md  design-system.md  ifc_dwg_assessment.md  perf_baseline.json  perf_benchmarks.md
evals/: RESULTS.md  golden_prompts.py  harness.py  run_live_eval.py
k8s/: README.md  deployment.yaml  hpa.yaml  ingress.yaml  ingress.yaml.example  kustomization.yaml  pvc.yaml  service.yaml
k8s/base/: deployment.yaml
k8s/dev/: deployment-scale-patch.yaml  kustomization.yaml  postgres.yaml  pvc-delete-patch.yaml  redis.yaml  secret.yaml
monitoring/: alerts.yml  grafana-dashboard.json  prometheus.yml
monitoring/grafana-provisioning/dashboards/: dashboard.yml
monitoring/grafana-provisioning/datasources/: datasource.yml
scripts/: backup_sqlite.py  bench_frontend_render.py  bench_large_doc.py  k8s_smoke_test.py  load_test.py
src/crdt_cad/: __init__.py
src/crdt_cad/ai/: __init__.py  dsl.py  generator.py  house_spec.py  interpreter.py  mesh_builder.py  mesh_repair.py  mesh_types.py  meshy_adapter.py  procedural_house.py  registry.py  scene.py  scene_layout.py  validation.py
src/crdt_cad/ai/generators/: __init__.py  architectural.py  furniture.py  house.py  primitives.py  wall_opening.py
src/crdt_cad/crdt/: __init__.py  clock.py  document.py  lww.py  mesh.py  rga.py  serialize.py
src/crdt_cad/export/: __init__.py  dxf_io.py  mesh_interop.py  pdf_io.py  step_export.py  stl_export.py  svg_io.py
src/crdt_cad/geometry/: __init__.py  constraints.py  mesh_boolean.py  mesh_validity.py  modify.py  validity.py
src/crdt_cad/persistence/: __init__.py  accounts.py  store.py
src/crdt_cad/server/: __init__.py  app.py  auth.py  billing.py  logging_config.py  metrics.py  pubsub.py  security.py
tests/: conftest.py  test_accounts.py  test_ai_dsl.py  test_ai_generators.py  test_ai_mesh_builder.py  test_ai_registry.py  test_ai_scene.py  test_ai_validation.py  test_backup_postgres.py  test_backup_sqlite.py  test_billing.py  test_clock.py  test_comments_activity.py  test_constraints.py  test_document.py  test_evals.py  test_export_import.py  test_frontend_kill_list.py  test_frontier_resync.py  test_gdpr_and_reports.py  test_generation_cancel.py  test_generation_endpoint.py  test_generator.py  test_graceful_shutdown.py  test_interpreter.py  test_lww.py  test_mesh.py  test_mesh_boolean.py  test_mesh_interop.py  test_mesh_repair.py  test_mesh_undo.py  test_mesh_validity.py  test_mesh_validity_integration.py  test_meshy_adapter.py  test_org_permissions.py  test_persist_debounce.py  test_persistence.py  test_platform_admin.py  test_postgres_store.py  test_procedural_house.py  (+10 more)
tests/e2e/: conftest.py  test_3d_usability_e2e.py  test_ai_generation_e2e.py  test_art_direction_e2e.py  test_collaboration_e2e.py  test_constraint_persistence_e2e.py  test_constraint_ui_e2e.py  test_design_system.py  test_designer_features_e2e.py  test_input_feel_e2e.py  test_keyboard_e2e.py  test_layout_e2e.py  test_measurement_dimensions_e2e.py  test_offline_durability_e2e.py  test_presence_e2e.py  test_readonly_share_links_e2e.py  test_selection_editing_e2e.py  test_shapes_e2e.py  test_state_legibility_e2e.py  test_theme_toggle_e2e.py  test_viewport_e2e.py  test_workspace_home_e2e.py
