[project]
name = "crdt-cad"
version = "0.1.0"
description = "Real-time collaborative CAD engine built on pure-Python CRDTs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = [
    "cad",
    "crdt",
    "collaborative-editing",
    "real-time-collaboration",
    "conflict-free-replicated-data-type",
    "webrtc",
    "websocket",
    "fastapi",
    "3d-mesh",
    "vector-graphics",
    "offline-first",
    "distributed-systems",
    "text-to-3d",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
]
dependencies = [
    "numpy>=1.26",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "msgpack>=1.0",
    "pydantic>=2.7",
    "numba>=0.60",
    "ezdxf>=1.3",
    "prometheus_client>=0.20",
    "aiortc>=1.9",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "pytest-playwright>=0.5",
    "hypothesis>=6.100",
    "httpx>=0.27",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# A test that hangs (a real bug -- an uncaught exception silently dropping a
# WebSocket connection with no reply the client's `receive_json()` was
# waiting on -- surfaced exactly this way while writing the security suite)
# should fail loudly in under a minute, not hang CI or a local run forever.
timeout = 30
markers = [
    "e2e: browser-driven end-to-end tests against a live server (needs `playwright install chromium`); excluded by default, run with `-m e2e`",
]
# e2e tests need a real Chromium install and a spawned live server -- opt-in
# only, so a plain `pytest` from a fresh checkout (no browsers installed)
# still passes. CI runs them explicitly as their own job (see
# .github/workflows/ci.yml) after `playwright install chromium`.
addopts = "-m \"not e2e\""

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
