[project]
name = "crdt-cad"
version = "0.1.0"
description = "Real-time collaborative CAD engine built on pure-Python CRDTs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = [
    "cad",
    "crdt",
    "collaborative-editing",
    "real-time-collaboration",
    "conflict-free-replicated-data-type",
    "webrtc",
    "websocket",
    "fastapi",
    "3d-mesh",
    "vector-graphics",
    "offline-first",
    "distributed-systems",
    "text-to-3d",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
]
dependencies = [
    "numpy>=1.26",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "msgpack>=1.0",
    "pydantic>=2.7",
    "numba>=0.60",
    "ezdxf>=1.3",
    "prometheus_client>=0.20",
    "aiortc>=1.9",
    "itsdangerous>=2.2",
    "trimesh>=4.0",
    # Phase G1 (Part 5): door/window generators need real CSG boolean
    # cuts (manifold3d is trimesh's pip-installable boolean-engine
    # backend -- no external CAD program needed); the arch generator (and
    # any non-convex extruded footprint) needs shapely for correct
    # polygon triangulation via trimesh.creation.extrude_polygon. Both
    # core, not optional extras -- these generators are in the "at
    # minimum" list, expected to work with zero extra installs, the same
    # bar trimesh itself is held to.
    "manifold3d>=3.0",
    "shapely>=2.0",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29",
]
redis = [
    "redis>=5.0",
]
step = [
    "build123d>=0.11",
]
meshy = [
    "requests>=2.31",
    # Phase G7: the mesh-budget pipeline decimates an imported diffusion
    # mesh down to a configurable face count before CRDT injection --
    # trimesh.Trimesh.simplify_quadric_decimation needs this backend.
    "fast_simplification>=0.1.7",
]
accounts = [
    # Part 6 P1: OAuth sign-in (Google/GitHub) only -- magic-link sign-in
    # needs nothing beyond the core deps (itsdangerous is already core).
    "authlib>=1.3",
    # authlib's Starlette OAuth client uses httpx for token/userinfo calls.
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "pytest-playwright>=0.5",
    "hypothesis>=6.100",
    "httpx>=0.27",
    "ruff>=0.11",
    "asyncpg>=0.29",
    "redis>=5.0",
    "requests>=2.31",
    "fast_simplification>=0.1.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Phase G6: lets tests/test_evals.py import the top-level evals/ package
# (a project-level artifact, deliberately not shipped inside the
# installable src/crdt_cad package -- same reasoning as monitoring/ or
# scripts/) via a plain `from evals... import ...`, no sys.path hacks.
pythonpath = ["."]
# A test that hangs (a real bug -- an uncaught exception silently dropping a
# WebSocket connection with no reply the client's `receive_json()` was
# waiting on -- surfaced exactly this way while writing the security suite)
# should fail loudly in under a minute, not hang CI or a local run forever.
timeout = 30
markers = [
    "e2e: browser-driven end-to-end tests against a live server (needs `playwright install chromium`); excluded by default, run with `-m e2e`",
]
# e2e tests need a real Chromium install and a spawned live server -- opt-in
# only, so a plain `pytest` from a fresh checkout (no browsers installed)
# still passes. CI runs them explicitly as their own job (see
# .github/workflows/ci.yml) after `playwright install chromium`.
addopts = "-m \"not e2e\""

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
