[project]
name = "crdt-cad"
version = "0.1.0"
description = "Real-time collaborative CAD engine built on pure-Python CRDTs"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Temitayo Kayode" },
]
requires-python = ">=3.11"
keywords = [
    "cad",
    "crdt",
    "collaborative-editing",
    "real-time-collaboration",
    "conflict-free-replicated-data-type",
    "webrtc",
    "websocket",
    "fastapi",
    "3d-mesh",
    "vector-graphics",
    "offline-first",
    "distributed-systems",
    "text-to-3d",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
]
dependencies = [
    "numpy>=1.26",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "msgpack>=1.0",
    "pydantic>=2.7",
    "numba>=0.60",
    "ezdxf>=1.3",
    "prometheus_client>=0.20",
    "aiortc>=1.9",
    "itsdangerous>=2.2",
    "trimesh>=4.0",
    # Phase G1 (Part 5): door/window generators need real CSG boolean
    # cuts (manifold3d is trimesh's pip-installable boolean-engine
    # backend -- no external CAD program needed); the arch generator (and
    # any non-convex extruded footprint) needs shapely for correct
    # polygon triangulation via trimesh.creation.extrude_polygon. Both
    # core, not optional extras -- these generators are in the "at
    # minimum" list, expected to work with zero extra installs, the same
    # bar trimesh itself is held to.
    "manifold3d>=3.0",
    "shapely>=2.0",
    # Part 7 C3: sheets/title blocks/PDF export -- pure-Python, no system
    # library (unlike a cairosvg/weasyprint route), same "just works
    # everywhere this project already runs" bar ezdxf/shapely are held to.
    "reportlab>=4.0",
    # Part 7 C4: trimesh's own glTF/3MF exporters (trimesh itself is
    # already core) need these two at import time -- both are ordinary
    # wheel-installable packages (lxml ships prebuilt wheels for every
    # platform this project targets), not a heavy/native-build dependency
    # the way build123d's OpenCascade bindings are, so both stay core
    # rather than becoming another optional extra.
    "networkx>=3.0",
    "lxml>=5.0",
]

[project.urls]
Repository = "https://github.com/TemiKayode/cad"
Issues = "https://github.com/TemiKayode/cad/issues"

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29",
]
redis = [
    "redis>=5.0",
]
step = [
    "build123d>=0.11",
]
print = [
    # 3D-print mesh repair (crdt_cad.ai.mesh_repair) -- lazily imported,
    # already gracefully falls back to a plain fan-triangulation when
    # this isn't installed, so this extra is purely to opt into the real
    # non-manifold-repair/Poisson-reconstruction path instead of that
    # fallback. Found undeclared during a repo audit (2026-07-11): the
    # module always assumed it might be absent, but two tests assumed it
    # *was* present with no `importorskip` guard, which would have
    # errored on a fresh CI checkout the moment CI's billing lock clears.
    "pymeshlab>=2023.12",
]
meshy = [
    "requests>=2.31",
    # Phase G7: the mesh-budget pipeline decimates an imported diffusion
    # mesh down to a configurable face count before CRDT injection --
    # trimesh.Trimesh.simplify_quadric_decimation needs this backend.
    "fast_simplification>=0.1.7",
]
accounts = [
    # Part 6 P1: OAuth sign-in (Google/GitHub) only -- magic-link sign-in
    # needs nothing beyond the core deps (itsdangerous is already core).
    "authlib>=1.3",
    # authlib's Starlette OAuth client uses httpx for token/userinfo calls.
    "httpx>=0.27",
]
billing = [
    # Part 6 P6: org subscriptions (Stripe Checkout + billing portal +
    # webhook-driven status sync), test-mode only in this repo -- see
    # docs/configuration.md. Lazily imported (crdt_cad.server.billing),
    # so a deployment that never sets CRDT_CAD_STRIPE_SECRET_KEY doesn't
    # need this extra installed at all.
    "stripe>=10.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "pytest-playwright>=0.5",
    "hypothesis>=6.100",
    "httpx>=0.27",
    "ruff>=0.11",
    "asyncpg>=0.29",
    "redis>=5.0",
    "requests>=2.31",
    "fast_simplification>=0.1.7",
    "stripe>=10.0",
    "mypy>=1.10",
    "pymeshlab>=2023.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Phase G6: lets tests/test_evals.py import the top-level evals/ package
# (a project-level artifact, deliberately not shipped inside the
# installable src/crdt_cad package -- same reasoning as monitoring/ or
# scripts/) via a plain `from evals... import ...`, no sys.path hacks.
pythonpath = ["."]
# A test that hangs (a real bug -- an uncaught exception silently dropping a
# WebSocket connection with no reply the client's `receive_json()` was
# waiting on -- surfaced exactly this way while writing the security suite)
# should fail loudly in under a minute, not hang CI or a local run forever.
timeout = 30
markers = [
    "e2e: browser-driven end-to-end tests against a live server (needs `playwright install chromium`); excluded by default, run with `-m e2e`",
]
# e2e tests need a real Chromium install and a spawned live server -- opt-in
# only, so a plain `pytest` from a fresh checkout (no browsers installed)
# still passes. CI runs them explicitly as their own job (see
# .github/workflows/ci.yml) after `playwright install chromium`.
addopts = "-m \"not e2e\""

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
# Gradual/permissive mode (audit-recommended, "start permissive, ratchet
# per-module"): catches real type errors (wrong arg counts, undefined
# names, etc.) without requiring every third-party import to ship
# stubs or every function to already be fully annotated -- ratchet
# per-module by removing an entry below once it's been cleaned up,
# rather than trying to fix the whole codebase in one pass.
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = false
disable_error_code = ["import-untyped"]
